# sdl2pp

./: .clang-format  .gitmodules  CMakeLists.txt  Window.cpp  Window.h  main.cpp  vcpkg.json
game/: CMakeLists.txt
game/Empty/: Window.cpp  Window.h  main.cpp
game/GameOfLife/: CMakeLists.txt  GOLMap.cpp  GOLMap.h  Window.cpp  Window.h  main.cpp
game/example/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
game/opengl_demo/: CMakeLists.txt  FPSCamera.hpp  Shader.h  Window.cpp  Window.h  main.cpp
game/opengl_demo/gl/: GLObject.cpp  GLObject.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp
game/opengl_demo/shader/: DirectionalLightshader.frag  DirectionalLightshader.vert  LightSourceshader.frag  Lightshader.frag  Lightshader.vert  PointLightshader.frag  SpotLightshader.frag  instance_shader.fs  instance_shader.vs  model_loading.fs  model_loading.vs  screen_shader.fs  shader.frag  shader.vert
game/pong/: Ball.cpp  Ball.h  CMakeLists.txt  Window.cpp  Window.h  main.cpp
game/snake/: CMakeLists.txt  Window.cpp  Window.h  main.cpp
game/snake/snake/: Game.cpp  Game.h
game/snake/tools/: Resource.cpp  Resource.h
game/snake/ui/: UI.cpp  UI.h
sdl2pp/: GLWindow.cpp  GLWindow.hpp  Renderable.cpp  Renderable.h  Renderable.hpp  SAnimation.cpp  SAnimation.h  SAnimation.hpp  SDLpp.h  SRenderer.cpp  SRenderer.h  SRenderer.hpp  STexture.cpp  STexture.h  STexture.hpp  SWindow.cpp  SWindow.h  SWindow.hpp
sdl2pp/base/: Math.cpp  Math.h  Point.h  Rect.cpp  Rect.h  SDLAudio.cpp  SDLAudio.h  SDLDisplay.cpp  SDLDisplay.h  SDLEnvironment.cpp  SDLEnvironment.h  SDLImage.cpp  SDLImage.h  SDLLog.h  SDLMixer.cpp  SDLMixer.h  SDLPixels.cpp  SDLPixels.h  SDLRenderer.cpp  SDLRenderer.h  SDLSurface.cpp  SDLSurface.h  SDLTTF.cpp  SDLTTF.h  SDLTexture.cpp  SDLTexture.h  SDLWindow.cpp  SDLWindow.h  Scale.cpp  Scale.h  Time.cpp  Time.h
sdl2pp/common/: Math.cpp  Math.h  Point.cpp  Point.h  Point.hpp  SDLDisplay.h  SDLLog.h  SDLPixels.cpp  SDLPixels.h  SDLRenderer.cpp  SDLRenderer.h  SDLSurface.cpp  SDLSurface.h  SDLTexture.cpp  SDLTexture.h  SDLWindow.cpp  SDLWindow.h  Scale.cpp  Scale.hpp  Time.cpp  Time.hpp
sdl2pp/common/shape/: Circle.cpp  Circle.h  Rect.h
sdl2pp/gl/: GL.cpp  GL.hpp
sdl2pp/sdl/: SDLAudio.cpp  SDLAudio.h  SDLAudio.hpp  SDLDisplay.cpp  SDLDisplay.h  SDLDisplay.hpp  SDLEnvironment.cpp  SDLEnvironment.hpp  SDLImage.cpp  SDLImage.h  SDLMixer.cpp  SDLMixer.hpp  SDLPixels.h  SDLRenderer.cpp  SDLRenderer.h  SDLRenderer.hpp  SDLSurface.cpp  SDLSurface.h  SDLSurface.hpp  SDLTTF.cpp  SDLTTF.h  SDLTTF.hpp  SDLTexture.cpp  SDLTexture.hpp  SDLWindow.cpp  SDLWindow.h
sdl2pp/utils/: Assert.h
